--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,4 @@ lfw/
 saved_models/weights.best.from_scratch.hdf5
 saved_models/weights.best.vgg16.hdf5
 .ipynb_checkpoints/
-bottleneck_features/
+bottleneck_features/*.*
